# recombinase

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  inspect_pptx_shapes.py  pyproject.toml
.github/workflows/: ci.yml
examples/: consultant.example.yaml  template-config.example.yaml
src/recombinase/: __init__.py  cli.py  config.py  generate.py  inspect.py
tests/: conftest.py  test_end_to_end.py  test_multirun_list.py  test_new_command.py  test_regressions.py  test_sort_by.py  test_v0_1_10_bullet_preservation.py  test_v0_1_11_powerpoint_lock.py  test_v0_1_12_table_and_picture.py  test_v0_1_13_codex_audit_fixes.py  test_v0_1_6_features.py  test_v0_1_7_auto_detect.py  test_v0_1_8_validate_dryrun.py  test_v0_1_9_robustness.py  test_v0_2_0_config_validation.py  test_v0_2_0_coverage.py  test_v0_2_0_data_loading.py  test_v0_2_0_edge_cases.py  test_v0_2_0_p0_fixes.py  test_v0_2_0_validate_data.py
